Clean up usage of lucene deprecated search method
The IndexSearcher.search(Query, Collector) method has been deprecated
in favour of IndexSearcher.search(Query, CollectorManager)
* Switch to this new method in ReservoirSampler, also refactoring
  the ReservoirCollector and introducing an UnscoredLeafCollector
  interface to make implementation neater.
* Switch to using IndexSearcher.count(Query) in InternalEngineTests
* Remove an inadvertently committed @Seed annotation on InternalEngineTests,
  and fix a test bug in a randomized branch that was never exercised due
  to the fixed seed.